--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
          <br><br>
          <div class="bottom">
             <span class="MCS"><h3>More Coming Soon!</h3></span>
-            <span class="follow">
+            <span>
             <!-- Place this tag where you want the button to render. -->
             <a class="github-button" href="https://github.com/talonbragg" data-style="mega" data-count-href="/talonbragg/followers" data-count-api="/users/talonbragg#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @talonbragg on GitHub">Follow @talonbragg</a>
             <!-- Place this tag where you want the button to render. -->
