--- a/index.html
+++ b/index.html
@@ -17,8 +17,9 @@
          <a class="github-button" href="https://github.com/talonbragg/Custom-Markup" data-icon="octicon-star" data-style="mega" data-count-href="/talonbragg/Custom-Markup/stargazers" data-count-api="/repos/talonbragg/Custom-Markup#stargazers_count" data-count-aria-label="# stargazers on GitHub" aria-label="Star talonbragg/Custom-Markup on GitHub">Star</a>
          <a class="github-button" href="https://github.com/talonbragg/Custom-Markup/fork" data-icon="octicon-repo-forked" data-style="mega" data-count-href="/talonbragg/Custom-Markup/network" data-count-api="/repos/talonbragg/Custom-Markup#forks_count" data-count-aria-label="# forks on GitHub" aria-label="Fork talonbragg/Custom-Markup on GitHub">Fork</a>
          <br>
+      </div>
+      <div class="followers">
          <a class="github-button" href="https://github.com/talonbragg" data-style="mega" data-count-href="/talonbragg/followers" data-count-api="/users/talonbragg#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @talonbragg on GitHub">Follow <b>@talonbragg</b></a>
-         <br>
          <a class="github-button" href="https://github.com/PenetratingShot" data-style="mega" data-count-href="/PenetratingShot/followers" data-count-api="/users/PenetratingShot#followers" data-count-aria-label="# followers on GitHub" aria-label="Follow @PenetratingShot on GitHub">Follow <b>@PenetratingShot</b></a>
       </div>
          <header class="title">
